--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 <body>
   <h1>Job Search AI Tool</h1>
 
-  <form>
-    <input type="text" id="query" placeholder="Search job...">
-    <button type="button" onclick="searchJobs()">Search</button>
-  </form>
+  <input type="text" id="query" placeholder="Search job...">
+  <button onclick="searchJobs()">Search</button>
 
   <div id="results"></div>
 
@@ -17,25 +15,30 @@
     async function searchJobs() {
       const q = document.getElementById("query").value;
 
-      // Jooble API example (replace YOUR_API_KEY)
-      const response = await fetch("https://jooble.org/api/YOUR_API_KEY", {
+      const response = await fetch("api.php", {
         method: "POST",
-        body: JSON.stringify({ keywords: q, page: 1 })
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ q })
       });
 
       const data = await response.json();
 
       let html = "";
-      data.jobs.forEach(job => {
-        html += `
-          <div style='margin:10px;padding:10px;border:1px solid #ccc'>
-            <h3>${job.title}</h3>
-            <p>${job.location}</p>
-            <p>${job.snippet}</p>
-            <a href='${job.link}' target='_blank'>Apply Now</a>
-          </div>
-        `;
-      });
+
+      if (!data.jobs) {
+        html = "<p>No jobs found...</p>";
+      } else {
+        data.jobs.forEach(job => {
+          html += `
+            <div style='margin:10px;padding:10px;border:1px solid #ccc'>
+              <h3>${job.title}</h3>
+              <p>${job.location}</p>
+              <p>${job.snippet}</p>
+              <a href='${job.link}' target='_blank'>Apply Now</a>
+            </div>
+          `;
+        });
+      }
 
       document.getElementById("results").innerHTML = html;
     }
